[package]
name = "quad-net"
version = "0.1.2"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Miniquad friendly network abstractions"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.0.11", default-features = false, features = ["rustls"] }
tungstenite = {  version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "handshake"] }
log = "0.4.26"
rustls = { version = "0.23.27", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[dependencies]