[package]
name = "quad-net"
version = "0.1.2"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
description = "Miniquad friendly network abstractions"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
tokio-tungstenite  = {  version = "0.29.0", default-features = false, features = ["rustls-tls-webpki-roots", "handshake", "connect"] }
log = "0.4.32"
rustls = { version = "0.23.40", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "time", "net", "sync", "macros"] }
futures = { version = "0.3.32", default-features = false }

[dependencies]
